# HindleyMilner

./: .gitignore  .project  HindleyMilner.cabal
src/: HindleyMilner.hs  LExpr.hs  Main.hs  Queue.hs
src/HindleyMilner/: LExpr.hs  Queue.hs  Type.hs
