name:              HindleyMilner
version:           0.0.0.2
cabal-version:     >=1.2
build-type:        Simple
author:            Leo Wörteler

executable HindleyMilner
  hs-source-dirs:  src
  build-depends:   base >= 4,
                   containers,
                   parsec >= 3,
                   mtl >= 2
  ghc-options:     -Wall
  other-modules:   
                   HindleyMilner,
                   HindleyMilner.Type,
                   HindleyMilner.LExpr,
                   HindleyMilner.Queue
  main-is:         Main.hs

